perl (5.18.2-5) UNRELEASED; urgency=medium

  * 

 -- Niko Tyni <ntyni@debian.org>  Fri, 16 May 2014 00:39:51 +0300

perl (5.18.2-4) unstable; urgency=medium

  * Build with -fwrapv to fix build failures with GCC 4.9
    (Closes: #746890)
  * Add Provides/Breaks/Replaces for libpackage-constants-perl which
    will be deprecated in 5.20 (see #747628)

 -- Dominic Hargreaves <dom@earth.li>  Mon, 12 May 2014 23:53:26 +0100

perl (5.18.2-3) unstable; urgency=medium

  [ Niko Tyni ]
  * Small changes to debian/copyright to placate Config::Model::Dpkg.
    (Closes: #731570)
  * Backport upstream patch fixing crashes with 'undef *_, goto &sub'.
    (Closes: #736187)

  [ Dominic Hargreaves ]
  * Add Recommends on rename to perl (see #735134)
  * Update Standards-Version (no changes)
  * Fix typo in debian/t/copyright.t

 -- Dominic Hargreaves <dom@earth.li>  Mon, 05 May 2014 17:15:59 +0100

perl (5.18.2-2) unstable; urgency=medium

  [ Niko Tyni ]
  * Update debian/copyright to include the year 2013.

  [ Dominic Hargreaves ]
  * Upload to unstable

 -- Dominic Hargreaves <dom@earth.li>  Tue, 14 Jan 2014 19:47:33 +0000

perl (5.18.2-1) experimental; urgency=low

  * New upstream release.

 -- Niko Tyni <ntyni@debian.org>  Wed, 08 Jan 2014 21:17:36 +0200

perl (5.18.1-5) unstable; urgency=medium

  [ Dominic Hargreaves ]
  * Revert patches disabling GNU/Hurd tests which now succeed:
    - debian/hurd_net_ping_disable_test.diff (Closes: #709385)
    - debian/hurd_test_skip_io_pipe.diff (Closes: #650096)
    - debian/hurd_test_skip_pipe.diff (Closes: #650187)
    - debian/hurd_test_skip_sigdispatch.diff (Closes: #650188)
    - debian/hurd_test_todo_syslog.diff (Closes: #650093)
  * Various tidying of Copyright file in line with Lintian's suggestions
  * Override Lintian tag spelling-error-in-copyright for an upstream error
  * Override Lintian tag empty-binary-package for libperl5.18 as it
    is a dummy package on some architectures

  [ Niko Tyni ]