@@ -34,7 +34,13 @@ patchlevel  = patchlevel-debian.h
 
 # If nonempty, this will determine $Config{debian_abi} and Provides: entries
 # (otherwise, the Provides: entries will be generated by debian/mkprovides)
+
+# see #753444 / #753542
+ifeq (s390x-linux-gnu,$(shell dpkg-architecture -qDEB_HOST_GNU_TYPE))
+perlabi = 5.18.2d
+else
 perlabi =
+endif
 
 checkdir    = test -d debian
 checkroot   = test `id -u` -eq 0
@@ -56,7 +62,9 @@ subst_next_upstream = -VNext-Upstream-Version=$(nextversion)
 ifeq (,$(perlabi))
 subst_perlapi  = -Vperlapi:Provides="`./perl.static debian/mkprovides`"
 else
-subst_perlapi  = -Vperlapi:Provides="perlapi-$(perlabi)"
+# temporarily append instead of overriding, see #753444 / #753542
+#subst_perlapi  = -Vperlapi:Provides="perlapi-$(perlabi)"
+subst_perlapi  = -Vperlapi:Provides="`./perl.static debian/mkprovides`, perlapi-$(perlabi)"
 endif
 
 # for cpan/Compress-Raw-Zlib
